apps/recipes/mealie/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway-system
  hostnames:
    - mealie.${EXTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
